@@ -1,13 +1,13 @@
 package com.edu.orderservice.service;
 
-import com.edu.orderservice.dto.OrderItemRequestDTO;
 import com.edu.orderservice.dto.OrderRequestDTO;
 import com.edu.orderservice.dto.OrderResponseDTO;
 import com.edu.orderservice.document.Order;
 import com.edu.orderservice.document.OrderItem;
 import com.edu.orderservice.document.OrderStatus;
 import com.edu.orderservice.repository.OrderRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
@@ -16,16 +16,17 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class OrderService {
 
-    @Autowired
-    private OrderRepository orderRepository;
+    private final OrderRepository orderRepository;
+
+    private final ModelMapper modelMapper;
 
     public OrderResponseDTO placeOrder(OrderRequestDTO dto) {
 
         List<OrderItem> items = dto.getItems().stream().map(i ->
-                new OrderItem(i.getMenuItemId(), i.getName(), i.getQuantity(), i.getPrice())
-        ).toList();
+                modelMapper.map(i, OrderItem.class)).collect(Collectors.toList());
 
         double total = items.stream()
                 .mapToDouble(i -> i.getPrice() * i.getQuantity())
@@ -42,19 +43,20 @@ public class OrderService {
 
         Order saved = orderRepository.save(order);
 
-        return mapToResponseDTO(saved);
+        return modelMapper.map(saved, OrderResponseDTO.class);
     }
 
     public List<OrderResponseDTO> getOrdersByCustomerId(String customerId) {
         return orderRepository.findByCustomerId(customerId)
                 .stream()
-                .map(this::mapToResponseDTO)
+                .map(order -> modelMapper.map(order, OrderResponseDTO.class))
                 .collect(Collectors.toList());
     }
 
     public Optional<OrderResponseDTO> getOrderById(String orderId) {
         return orderRepository.findById(orderId)
-                .map(this::mapToResponseDTO);
+                .map(order -> modelMapper.map(order,
+                        OrderResponseDTO.class));
     }
 
     public Optional<OrderResponseDTO> updateOrderStatus(String orderId, OrderStatus status) {
@@ -63,27 +65,10 @@ public class OrderService {
             Order order = optional.get();
             order.setStatus(status);
             order.setUpdatedAt(Instant.now());
-            return Optional.of(mapToResponseDTO(orderRepository.save(order)));
+            Order updated = orderRepository.save(order);
+            return Optional.of(modelMapper.map(updated, OrderResponseDTO.class));
         }
         return Optional.empty();
     }
-
-    private OrderResponseDTO mapToResponseDTO(Order order) {
-        List<OrderItemRequestDTO> items = order.getItems().stream().map(i ->
-                new OrderItemRequestDTO(i.getMenuItemId(), i.getName(), i.getQuantity(), i.getPrice())
-        ).collect(Collectors.toList());
-
-        return new OrderResponseDTO(
-                order.getId(),
-                order.getCustomerId(),
-                order.getRestaurantId(),
-                order.getTotalAmount(),
-                order.getStatus(),
-                items,
-                order.getCreatedAt(),
-                order.getUpdatedAt()
-        );
-    }
-
 
 }
